fix(3156115079): align tabs to fima

--- a/src/components/UI/Tab/Tab.module.scss
+++ b/src/components/UI/Tab/Tab.module.scss
@@ -2,7 +2,7 @@
 
 .tab {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 20px;
   color: $--color-white;
   cursor: pointer;
